<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>station</name>
  <version>0.0.0</version>
  <description>Base station for turtlebot3 experiments</description>
  <maintainer email="rain.epp@ualberta.ca">rain</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>image_transport</depend>
  <depend>rviz2</depend>
  <depend>theora_image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>